# hypothesis-openapi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml  codspeed.yml  release.yml  update-pre-commit.yml
benches/: v2.py
src/hypothesis_openapi/: __init__.py  _common.py  _serialize.py  _strategies.py  _types.py  _v2.py  _v3.py
tests/: test_strategy.py  v2.py  v3.py
